asserts/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Space+Grotesk:wght@300..700&display=swap');

/* resets */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    /* Professional Tech */
    --color-primary: #1E3A8A;

    --color-accent: #f4520c;
    --color-highlight: #bd5b5b;
    --color-neutral: #F3F4F6;
    --color-charcoal: #0e0e0e;
    --color-gray: #303030;
    --dark-text: #b4b4b4;

    --color-main-text: var(--dark-text);
    --navColorBg: var(--color-charcoal);
    --bgColor: var(--color-charcoal);
    --btnColor: var(--color-accent);
    --fontColor: var(--color-neutral);
    --aboutBg: var(--color-gray);
    --footerColor: var(--color-gray);

    --headFont: "Space Grotesk", sans-serif;
    --textFont: "DM Sans", sans-serif;


    /* Professional Tech → recruiters see structure, reliability, and focus. */
    --sectionPadding: 4rem 2rem;
    --sectionMarginBottom: 4rem;

    --cardPadding: 2rem;
    --cardMarginBottom: 2rem;
    --cardRadius: 0.5rem;
}

/***** Reset Blocks *****/
/* Recommended Typography Spacing */
body {
    font-family: var(--textFont);
    color: var(--color-neutral);

    font-size: 1rem;
    line-height: 1.6;
    margin-bottom: 1rem;
    background: var(--bgColor);
}

h1 {
    line-height: 1.2;
    font-size: clamp(4rem, 5vw, 2.5rem);
    margin-bottom: 2rem;
    font-family: var(--headFont);
}

h2 {
    font-size: clamp(2rem, 4vw, 3rem);
    margin-bottom: 1.5rem;
}

h3 {
    font-size: clamp(1.5rem, 3vw, 2rem);
    margin-bottom: 1rem;
}

p {
    font-size: 1rem;
    line-height: 1.6;
    margin-bottom: 1rem;
}

small,
.caption {
    font-size: 0.875rem;
    line-height: 1.4;
    margin-bottom: 0.75rem;
}

img {
    max-inline-size: 100%;
    display: block;
    overflow: hidden;
}

/***** Animates and hovers Effects *****/
.breakupPoints::before {
    content: "// ";
    font-weight: bold;
    color: var(--btnColor);
    margin-right: 4px;

}

.skill-breakPoint::before {
    content: "// 002 ";
    font-weight: bold;
    color: var(--btnColor);
    margin-right: 4px;

}

span {
    color: var(--btnColor);
}

.iqanda {
    color: #f0a307;
}

a {
    color: var(--color-main-text);
    text-decoration: none;
}

.btn {
    color: var(--color-neutral);
    transition: all .3s ease;
    padding: 10px 20px;
    font-size: 1.1rem;
    background: transparent;
    border: none;
}

#chat {
    padding: 10px 20px;
    font-size: 1.25rem;
    color: var(--color-neutral);
    font-weight: 500;
    background: var(--btnColor);
    transition: all .3s ease;
}

#chat:is(:hover, :focus) {
    background: var(--color-highlight);
}

.btn-primary {
    padding: 15px 25px;
    font-size: 1.25rem;
    font-weight: 500;
    background: var(--btnColor);
    color: #ffffff;
    border: none;
}

.btn-primary:is(:hover, :focus) {
    background: var(--color-highlight);
}

.btn-secondary {
    font-weight: 500;
    padding: 15px 25px;
    font-size: 1.25rem;
    background: transparent;
    border: 1px solid var(--color-gray);
}

.btn-secondary:is(:hover, :focus) {
    border: 1pt solid var(--color-neutral);
}

.iconHover {
    background: transparent;
    border: 1pt solid var(--color-gray);
    transition: all .3s ease;
}

.iconHover:is(:hover, :focus) {
    border: 1pt solid var(--btnColor);

}

.card img:is(:hover, :focus) {
    transition: all .3s ease-in-out;
    transform: scale(1.1);
    background: var(--color-gray);
}

/* .card :is(:hover, :focus) {
    transition: all .3s ease-in-out;
    background: var();
    border: 3pt solid #F3F4F6;
} */

.info {
    border-left: 3pt solid var(--btnColor);

}

.info>* {
    margin-left: 15px;
    line-height: 1;
}

/***** End Animates and hovers Effects *****/

/***** End Reset Blocks *****/
.containner {
    max-width: 1200px;
    margin: 0 auto;
}


/***** Navigation Section *****/
nav {
    /* border: 2pt solid yellow; */
    display: flex;
    justify-content: space-between;
    align-items: center;
    /* margin-block: 1rem; */
    margin-inline: auto;
    padding: 2rem 1rem;
    margin-bottom: var(--cardMarginBottom);

    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 1000;
    background: var(--bgColor);
    border-bottom: 1pt solid var(--color-gray);
}

#logo {
    font-size: 1.25rem;
    font-weight: 700;
    color: #fff;
}

.navBar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;

    margin: 0;
    padding: 0;

}

.navBar li {
    list-style: none;
}

.navBar a:is(:hover) {
    color: var(--color-neutral);
}

.toggleBtn {
    display: none;
}

header {
    padding: 100px 20px;
    min-height: 100vh;
}

.hero {
    display: flex;
    justify-content: center;
    gap: 2rem;
    max-width: min(1200px, 100%);
}

.hero img {
    flex: 1 1 45%;
    max-width: 100%;

}

.hero .heroContent {
    flex: 1 1 45%;

}

/* .hero img{
    flex: 1;
} */
/***** End Navigation Section *****/

/***** Skills Section *****/
.skills-content {
    color: #fff;
    border-radius: 8px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
    margin: auto;
    gap: 2rem;
    place-content: center;
}

.skills-content {
    margin-bottom: 1rem;
}

.skill span {
    /* display: block; */
    color: var(--color-neutral);
    margin-bottom: 0.3rem;
    font-weight: bold;
}

.progress {
    background: #333;
    max-width: 100%;
    border-radius: 4px;
    overflow: hidden;
    height: 4px;

}

.progress-bar {
    background: var(--btnColor);
    height: 100%;
}

.tags {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
    margin-top: 1rem;
}

.tag {
    border: 1pt solid var(--color-gray);
    color: var(--color-main-text);
    padding: 0.4rem 0.8rem;
    border-radius: 4px;
    font-size: 0.9rem;
    transition: all .3s ease-in-out;
}

.tag:is(:hover, :focus) {
    border: 1pt solid var(--btnColor);
    color: var(--color-neutral);

}

/***** End Section *****/


/***** Service Section *****/
#service {
    background: var(--aboutBg);
}

.grid-container {
    background: var(--aboutBg);
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 2rem;
}

.card button{
    border: 1pt solid var(--color-charcoal);
    margin: .5rem;
}
/***** End Service Section *****/


section {
    padding: var(--sectionPadding);
    margin-bottom: var(--sectionMarginBottom);
}

/***** About Me *****/
#about {
    background: var(--aboutBg);
    display: flex;
    gap: 2rem;
}

#about .about-content:nth-child(1) {
    flex: 1;
}

#about .about-content:nth-child(2) {
    flex: 2;
}

.about-info {
    display: flex;
    justify-content: flex-start;
    padding-block: 1rem;
}

.info {
    padding: 0 .7rem;
}

/***** End About Me *****/


footer {
    background: var(--footerColor);
    color: var(--dark-text);
    padding: var(--cardPadding);
}

/***** End Responsive Section *****/

